<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/author"
        android:labelFor="@id/targetedFundraisingAuthor"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/targetedFundraisingAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:background="@drawable/edittext_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/fundraising_ends" />

    <RadioGroup
        android:id="@+id/targetedFundraisingEndsMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <RadioButton
            android:id="@+id/targetedFundraisingEndsOnCollect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/when_sum_will_be_collected" />

        <RadioButton
            android:id="@+id/targetedFundraisingEndsOnDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_specific_date"/>
    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/fundraising_ending_date" />

    <EditText
        android:id="@+id/targetedFundraisingEndingDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:background="@drawable/edittext_background"
        android:hint="@string/select_date"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/targetedFundraisingExtraOkBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/targetedFundraisingAccount"
        android:layout_marginTop="24dp"
        android:text="@string/continue_"
        android:theme="@style/PrimaryButton"/>
</LinearLayout>