<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_cover"
            app:drawableStartCompat="@drawable/ic_image"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:drawablePadding="16dp"
            app:layout_constraintStart_toStartOf="@id/targetedFundraisingCover"
            app:layout_constraintEnd_toEndOf="@id/targetedFundraisingCover"
            app:layout_constraintTop_toTopOf="@id/targetedFundraisingCover"
            app:layout_constraintBottom_toBottomOf="@id/targetedFundraisingCover"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/targetedFundraisingCover"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            android:background="@drawable/dashed_border" />

        <View
            android:id="@+id/targetedFundraisingRemoveCoverBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/close_button_background"
            app:layout_constraintTop_toTopOf="@id/targetedFundraisingCover"
            app:layout_constraintEnd_toEndOf="@id/targetedFundraisingCover"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/targetedFundraisingNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/targetedFundraisingCover"
            android:text="@string/fundraising_name"
            android:labelFor="@id/targetedFundraisingName"/>

        <EditText
            android:id="@+id/targetedFundraisingName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fundraising_name"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/targetedFundraisingNameLabel"
            android:background="@drawable/edittext_background"/>

        <TextView
            android:id="@+id/targetedFundraisingSumLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/targetedFundraisingName"
            android:text="@string/fundraising_sum"
            android:labelFor="@id/targetedFundraisingSum"/>

        <EditText
            android:id="@+id/targetedFundraisingSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/how_much_need_to_collect"
            android:layout_marginTop="4dp"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/targetedFundraisingSumLabel"
            android:background="@drawable/edittext_background"/>

        <TextView
            android:id="@+id/targetedFundraisingTargetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/targetedFundraisingSum"
            android:text="@string/target"
            android:labelFor="@id/targetedFundraisingTarget"/>

        <EditText
            android:id="@+id/targetedFundraisingTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/for_example_cure"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/targetedFundraisingTargetLabel"
            android:background="@drawable/edittext_background"/>

        <TextView
            android:id="@+id/targetedFundraisingDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/targetedFundraisingTarget"
            android:text="@string/description"
            android:labelFor="@id/targetedFundraisingDescription"/>

        <EditText
            android:id="@+id/targetedFundraisingDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fundraising_description_hint"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/targetedFundraisingDescriptionLabel"
            android:background="@drawable/edittext_background"/>

        <TextView
            android:id="@+id/targetedFundraisingAccountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/targetedFundraisingDescription"
            android:text="@string/account"
            android:labelFor="@id/targetedFundraisingAccount"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/targetedFundraisingAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="0dp"
            app:layout_constraintTop_toBottomOf="@id/targetedFundraisingAccountLabel"
            android:background="@drawable/edittext_background" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/targetedFundraisingOkBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/targetedFundraisingAccount"
            android:layout_marginTop="24dp"
            android:text="@string/continue_"
            android:theme="@style/PrimaryButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>