<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp">

    <EditText
        android:id="@+id/createPostTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_post_text"
        android:background="@null"
        android:maxLines="5"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/createPostCover"
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/ic_target"/>

            <TextView
                android:id="@+id/createPostName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createPostCover"
                android:layout_marginStart="12dp"
                tools:text="Title text"
                android:textColor="#000"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/createPostAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createPostName"
                android:layout_marginStart="12dp"
                tools:text="Author name"/>

            <TextView
                android:id="@+id/createPostType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/createPostAuthor"
                app:layout_constraintTop_toBottomOf="@id/createPostName"
                android:layout_marginStart="12dp"
                tools:text="Help needs monthly"/>

            <View
                android:id="@+id/createPostDivider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#C3C3C3"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createPostAuthor"/>

            <TextView
                android:id="@+id/createPostStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createPostDivider"
                android:text="@string/help_first"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:textSize="16sp"/>

            <ProgressBar
                android:id="@+id/createPostProgress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/createPostHelpBtn"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@id/createPostStatus"/>

            <Button
                android:id="@+id/createPostHelpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/createPostStatus"
                app:layout_constraintBottom_toBottomOf="@id/createPostProgress"
                android:text="@string/help"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="12dp"
                style="@style/PrimaryButtonOutlined"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>